--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <main>
         <!-- banner returnal -->
-        <section class="banner-returnal">
+        <section class="banner-returnal wd100 ">
             <div class="container">
                 <div class="row align-items-end banner-row">
                     <div class="col-lg-5 mb-5 returnal-description">
@@ -168,7 +168,7 @@
                             <img class="wd100 " src="./img/joypad-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
-                            Controller wireless DualSense<i class="tm fas fa-trademark"></i>
+                            Controller wireless DualSense&trade;
                         </div>   
                     </div>
                     <!-- 3 -->
@@ -177,7 +177,7 @@
                             <img class="wd100 " src="./img/headset-thumb.png" alt="">
                         </div>
                         <div class="mt-3 text-center small-devices-description">
-                            Cuffie Wireless con microfono PULSE<i class="tm fas fa-trademark"></i>
+                            Cuffie Wireless con microfono PULSE&trade;
                         </div> 
                     </div>
                     <!-- 4 -->
@@ -204,7 +204,7 @@
         </section>
 
         <!-- banner itt -->
-        <section class="banner-itt mt-4">
+        <section class="banner-itt wd100 mt-4">
             <div class="container">
                 <div class="row align-items-end banner-row">
                     <div class="col-lg-5 mb-5 itt-description">
@@ -223,7 +223,7 @@
         </section>
         
         <!-- nuove uscite -->
-        <section class="new-exits">
+        <section class="new-exits wd100 ">
             <div class="container">
                 <!-- scritte -->
                 <h2 class="pt-4">Nuove uscite</h2>
@@ -233,8 +233,8 @@
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
                         <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <div class="fw-bold mt-2">
-                            TonyHawk's<i class="tm fas fa-trademark"></i> 
-                            ProSkater<i class="tm fas fa-trademark"></i>
+                            TonyHawk's&trade; 
+                            ProSkater&trade;
                             1 + 2
                         </div>                 
                     </a>
@@ -247,8 +247,8 @@
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
                         <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <div class="fw-bold mt-2">
-                            TonyHawk's<i class="tm fas fa-trademark"></i> 
-                            ProSkater<i class="tm fas fa-trademark"></i>
+                            TonyHawk's&trade; 
+                            ProSkater&trade;
                             1 + 2
                         </div>
                     </a>
@@ -261,22 +261,8 @@
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
                         <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <div class="fw-bold mt-2">
-                            TonyHawk's<i class="tm fas fa-trademark"></i> 
-                            ProSkater<i class="tm fas fa-trademark"></i>
-                            1 + 2
-                        </div> 
-                    </a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
-                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                        <div class="fw-bold mt-2">
-                            Crash Bandicoot 4: It's about time
-                        </div>
-                    </a>
-                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
-                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                        <div class="fw-bold mt-2">
-                            TonyHawk's<i class="tm fas fa-trademark"></i> 
-                            ProSkater<i class="tm fas fa-trademark"></i>
+                            TonyHawk's&trade; 
+                            ProSkater&trade;
                             1 + 2
                         </div> 
                     </a>
@@ -284,13 +270,13 @@
                         <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <div class="fw-bold mt-2">
                             Crash Bandicoot 4: It's about time
-                        </div>                  
+                        </div>
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
                         <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <div class="fw-bold mt-2">
-                            TonyHawk's<i class="tm fas fa-trademark"></i> 
-                            ProSkater<i class="tm fas fa-trademark"></i>
+                            TonyHawk's&trade; 
+                            ProSkater&trade;
                             1 + 2
                         </div> 
                     </a>
@@ -303,8 +289,22 @@
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
                         <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <div class="fw-bold mt-2">
-                            TonyHawk's<i class="tm fas fa-trademark"></i> 
-                            ProSkater<i class="tm fas fa-trademark"></i>
+                            TonyHawk's&trade; 
+                            ProSkater&trade;
+                            1 + 2
+                        </div> 
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            Crash Bandicoot 4: It's about time
+                        </div>                  
+                    </a>
+                    <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4 mb-4">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <div class="fw-bold mt-2">
+                            TonyHawk's&trade; 
+                            ProSkater&trade;
                             1 + 2
                         </div> 
                     </a>
@@ -321,7 +321,7 @@
         <!-- writes -->
         <section class="writes mt-5">
             <div class="container text-center my-5 pt-4">
-                <h2>Esplora PlayStation<i class="tm far fa-registered"></i> 4</h2> 
+                <h2>Esplora PlayStation<span class="fs-5">&reg;</span> 4</h2> 
                 <p class="description-writes fs-5 fw-bold mt-4">Giochi incredibili e intrattenimento senza fine. <br> Non c'è mai stato un momento migliore per giocare sulla tua PS4</p>
             </div>
         </section>
@@ -382,7 +382,7 @@
         </section>
 
         <!-- playstation plus -->
-        <section class="playstation-plus mt-4">
+        <section class="playstation-plus wd100  mt-4">
             <div class="container">
                 <div class="row">
                     <!-- left -->
@@ -431,7 +431,7 @@
         </section>
 
         <!-- playstation now -->
-        <section class="playstation-now mt-4">
+        <section class="playstation-now wd100 mt-4">
             <div class="container">
                 <div class="row">
                     <!-- left -->
@@ -478,7 +478,7 @@
         </section> 
     </main>
 
-    <footer class="mt-5">
+    <footer class="mt-5 wd100 ">
         <div class="container pt-4">
             <!-- top-left -->
             <div class="row pt-5">
