--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
             
         </section>
 
-        <!-- social --> <!--CORREGGI-->
+        <!-- social -->
         <section class="mt-5">
-            <div class="container-fluid ">
+            <div class="container-fluid container-md ">
                 <!-- titolo -->
                 <h3 class="fs-2 fw-bold text-center pb-4">Seguici sui social media</h3>
                 <!-- social image -->
