--- a/index.html
+++ b/index.html
@@ -105,22 +105,34 @@
             <div class="container games mt-4">
                 <div class="row">
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img class="wd100 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <div class="border-games">
+                            <img class="wd100 p-1 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>    
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img class="wd100 " src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <div class="border-games">
+                            <img class="wd100 p-1" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div>              
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img class="wd100 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <div class="border-games">
+                            <img class="wd100 p-1 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div> 
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img  class="wd100 " src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <div class="border-games">
+                            <img class="wd100 p-1" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div> 
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img class="wd100 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <div class="border-games">
+                            <img class="wd100 p-1 " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div> 
                     </a>
                     <a href="/" class="col-6 col-sm-4 col-lg-2 mb-4">
-                        <img class="wd100 " src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <div class="border-games">
+                            <img class="wd100 p-1" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        </div> 
                     </a>
                 </div>
             </div>
