--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                         <h2 class="mt-4 fw-bold">Rompi il cerchio</h2>
                         <!-- paragrafo -->
                         <p class="mt-4 fw-bold">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
-                        <a href="/">
+                        <div>
                             <button class="pl-button mt-3">Acquista ora</button>
-                        </a>
+                        </div>
                     </div>
                 </div>   
             </div>
@@ -155,9 +155,9 @@
                     <div class="col-sm-12 col-md-4 mb-4 ">
                         <h2>Console PlayStation 5</h2>
                         <p class="description-writes mt-5 fw-bold">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
-                        <a href="/">
+                        <div>
                             <button class="pl-button mt-3">Maggiori informazioni</button>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-sm-12 col-md-7 offset-md-1">
                         <img class="wd100 " src="./img/playstation-5-thumb.png" alt="">
@@ -226,9 +226,9 @@
                         <h2 class="mt-4 fw-bold">Un'avventura cooperativa selvaggia ti attende</h2>
                         <!-- paragrafo -->
                         <p class="mt-4 fw-bold">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco di avventura cooperativa a piattaforme che stravolge il suo genere.</p>
-                        <a href="/">
+                        <div>
                             <button class="pl-button mt-3">Acquista ora</button>
-                        </a>
+                        </div>
                     </div>
                 </div>   
             </div>
@@ -353,9 +353,9 @@
                             <h2>PlayStation 4</h2>
                             <p class="description-writes fs-5 fw-bold mt-4">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
                         </a>
-                        <a href="/">
+                        <div>
                             <button class="pl-button fw-bold mt-3">Scopri di più</button>
-                        </a>
+                        </div>
                     </div>
 
                     <!-- prodotto2 -->
@@ -369,9 +369,9 @@
                             <h2>PlayStation VR</h2>
                             <p class="description-writes fs-5 fw-bold mt-4">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti</p>
                         </a>
-                        <a href="/">
+                        <div>
                             <button class="pl-button fw-bold mt-3">Scopri di più</button>
-                        </a>
+                        </div>
                     </div>
 
                     <!-- prodotto3 -->
@@ -385,9 +385,9 @@
                             <h2>Accessori</h2>
                             <p class="description-writes fs-5 fw-bold mt-4">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
                         </a>
-                        <a href="/">
+                        <div>
                             <button class="pl-button fw-bold mt-3">Scopri di più</button>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -403,7 +403,7 @@
                             <img class="plus-logo-image" src="./img/ps-plus-logo.png" alt="">
                         </div>
                         <p class="mt-4">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi ed altro ancora.</p>
-                        <a href="/"><button class="pl-button fw-bold mt-3">Esplora PlayStation plus</button></a>            
+                        <div><button class="pl-button fw-bold mt-3">Esplora PlayStation plus</button></div>            
                     </div>
                     <!-- right -->
                     <div class="col-md-7 none-image">
@@ -452,7 +452,7 @@
                             <img class="now-logo-image" src="./img/ps-now-logo-two-column.png" alt="">
                         </div>
                         <p class="mt-4 fw-bold">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
-                        <a href="/"><button class="pl-button fw-bold mt-3">Esplora PlayStation plus</button></a>            
+                        <div><button class="pl-button fw-bold mt-3">Esplora PlayStation plus</button></div>            
                     </div>
                     <!-- right -->
                     <div class="col-md-6 none-image">
