--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <!-- dropdown -->
                     <li class="d-flex ms-3">
-                        <a href="/" id="navbarDropdown">Giochi</a>
+                        <a href="/" >Giochi</a>
                         <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
                     </li>
                     <li class="d-flex ms-3">
-                        <a href="/" id="navbarDropdown">Hardware</a>
+                        <a href="/"">Hardware</a>
                         <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
                     </li>
                     <li class="d-flex ms-3">
-                        <a href="/" id="navbarDropdown">Servizi</a>
+                        <a href="/">Servizi</a>
                         <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
                     </li>
                     <li class="d-flex ms-3">
-                        <a href="/" id="navbarDropdown">Novità</a>
+                        <a href="/">Novità</a>
                         <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
                     </li>
                     <li class="d-flex ms-3">
-                        <a href="/" id="navbarDropdown">Fai acquisti</a>
+                        <a href="/">Fai acquisti</a>
                         <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
                     </li>
                     <li class="d-flex ms-3">
-                        <a href="/" id="navbarDropdown">Supporto</a>
+                        <a href="/">Supporto</a>
                         <img class="chevron mx-2 mt-1" src="./img/chevron-down-solid.svg" alt="">
                     </li>
 
